fixed quick search form css/layout on Firefox

--- a/telemeta/css/style.css
+++ b/telemeta/css/style.css
@@ -46,13 +46,14 @@ input {
 }
 
 #quick_search {
-    float: right;
-    font-size: 80%;
+    position: absolute;
+    top: 2em;
+    right: 1em;
 }
 
 #quick_search input {
     vertical-align: middle;
-    font-size: 80%;
+    font-size: 90%;
 }
 
 #quick_search_pattern {
